samples/_failures_safe/1761317891_8eb102_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6a3f265e.c: In function ‘main’:
./samples/SAFE/__tmp_6a3f265e.c:173:12: error: missing terminating " character
  173 |     printf("Enter text to
      |            ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_6a3f265e.c:173:5: error: expected expression at end of input
  173 |     printf("Enter text to
      |     ^~~~~~
./samples/SAFE/__tmp_6a3f265e.c:173:5: error: expected declaration or statement at end of input
